--- a/lib/components.html
+++ b/lib/components.html
@@ -12,6 +12,14 @@
 
     <hr>
 
+    <h2>@typography</h2>
+    <h1>This is the biggeset heading</h1>
+    <h2>This is the second biggest heading</h2>
+    <p>This is a normal text, free flowing and will wrap at the end like a paragraph.</p>
+    <p>This wil have <strong>bold</strong> text</p>
+    <small> This is relatively small text</small>
 
+    <hr>
+    
 </body>
 </html>
