--- a/lib/components.html
+++ b/lib/components.html
@@ -20,6 +20,16 @@
     <small> This is relatively small text</small>
 
     <hr>
+
+    <h2>@container</h2>
+    <h3>Fluid Container</h3>
+    <div>This is a fluid container and will go till the end of the page</div>
+    <h3>center container</h3>
+    <div>
+        This is a centered container and will go till the specified width
+    </div>
+
+    <hr>
     
 </body>
 </html>
