--- a/lib/components.html
+++ b/lib/components.html
@@ -30,6 +30,13 @@
     </div>
 
     <hr>
+
+    <h2>@links</h2>
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a>
+
+    <hr>
+
     
 </body>
 </html>
