--- a/lib/components.html
+++ b/lib/components.html
@@ -37,6 +37,32 @@
 
     <hr>
 
-    
+    <h2>@lists</h2>
+
+    <h3>unordered list</h3>
+    <p>This list is not going to have the bullet</p>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
+    <h3>unordered inline list</h3>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ul>
+
+    <h3>ordered inline list</h3>
+    <p>this list is going to be reversed</p>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+    </ol>
+
+    <hr>
+
 </body>
 </html>
