--- a/lib/components.html
+++ b/lib/components.html
@@ -64,5 +64,21 @@
 
     <hr>
 
+    <h2>@nav</h2>
+    <div>Logo or brand name appears here</div>
+    <ul>
+        <li>
+            <a href="/">nav1</a>
+        </li>
+        <li>
+            <a href="/">nav2</a>
+        </li>
+        <li>
+            <a href="/">nav3</a>
+        </li>
+    </ul>
+
+    <hr>
+    
 </body>
 </html>
