--- a/lib/components.html
+++ b/lib/components.html
@@ -79,6 +79,12 @@
     </ul>
 
     <hr>
+
+    <h2>@header</h2>
+    <img src="/">
+    <h1>Sankar Krishnan - Aspiring Web Developer</h1>
+
+    <hr>
     
 </body>
 </html>
