--- a/lib/components.html
+++ b/lib/components.html
@@ -107,6 +107,23 @@
     </section>
     
     <hr>
-    
+
+    <h2>@footer</h2>
+    <footer>
+        <div>
+            Some text
+        </div>
+        <ul>
+            <li>
+                <a href="/">link1</a>
+            </li>
+            <li>
+                <a href="/">link2</a>
+            </li>
+            <li>
+                <a href="/">link3</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
