--- a/lib/components.html
+++ b/lib/components.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Component Library</title>
+
+    <link href="styles.css" rel="stylesheet">
+    
 </head>
 <body>
     <h1>Sankar's Component Library</h1>
