update container style

--- a/lib/components.html
+++ b/lib/components.html
@@ -7,7 +7,7 @@
     <title>My Component Library</title>
 
     <link href="styles.css" rel="stylesheet">
-    
+
 </head>
 <body>
     <h1>Sankar's Component Library</h1>
@@ -26,9 +26,9 @@
 
     <h2>@container</h2>
     <h3>Fluid Container</h3>
-    <div>This is a fluid container and will go till the end of the page</div>
+    <div class="container container-fluid">This is a fluid container and will go till the end of the page</div>
     <h3>center container</h3>
-    <div>
+    <div class="container container-center">
         This is a centered container and will go till the specified width
     </div>
 
