update link styles

--- a/lib/components.html
+++ b/lib/components.html
@@ -35,9 +35,13 @@
     <hr>
 
     <h2>@links</h2>
-    <a href="/">Primary Link</a>
-    <a href="/">Secondary Link</a>
-
+    <div class="container container-center">
+        <a class="link link-primary" href="">Primary Link</a>
+        <a class="link link-secondary"
+        href="/">Secondary Link</a>
+    
+    </div>
+   
     <hr>
 
     <h2>@lists</h2>
