--- a/lib/components.html
+++ b/lib/components.html
@@ -48,7 +48,7 @@
 
     <h3>unordered list</h3>
     <p>This list is not going to have the bullet</p>
-    <ul>
+    <ul class="list list-nonbullet">
         <li>Item 1</li>
         <li>Item 2</li>
         <li>Item 3</li>
@@ -56,9 +56,9 @@
 
     <h3>unordered inline list</h3>
     <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
+        <li class="list list-inline">Item 1</li>
+        <li class="list list-inline">Item 2</li>
+        <li class="list list-inline">Item 3</li>
     </ul>
 
     <h3>ordered inline list</h3>
@@ -73,18 +73,21 @@
 
     <h2>@nav</h2>
     <nav>
-        <div>Logo or brand name appears here</div>
-        <ul>
-            <li>
-                <a href="/">nav1</a>
+        <div class="nav container"><p class="brand"> 
+            Logo or brand name appears here
+        </p>
+        <ul class="nav-position">
+           <li class="list-inline">
+                <a class="color active" href="/">nav1</a>
             </li>
-            <li>
-                <a href="/">nav2</a>
+           <li class="list-inline">
+                <a class="color" href="/">nav2</a>
             </li>
-            <li>
-                <a href="/">nav3</a>
+           <li class="list-inline">
+                <a class="color" href="/">nav3</a>
             </li>
         </ul>
+        </div>
     </nav>
     
 
