--- a/lib/components.html
+++ b/lib/components.html
@@ -94,9 +94,9 @@
     <hr>
 
     <h2>@header</h2>
-    <header>
-        <img src="/">
-        <h1>Sankar Krishnan - Aspiring Web Developer</h1>    
+    <header class="head">
+        <img class="head head-img"src="/">
+        <h1 class="head-text">Sankar Krishnan - <span style="color: black">Aspiring Web Developer</span></h1>    
     </header>
    
     <hr>
