update section style

--- a/lib/components.html
+++ b/lib/components.html
@@ -102,16 +102,16 @@
     <hr>
 
     <h2>@section</h2>
-    <section>
-        <div>
-            <h2>white section</h2>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
             <p>some text</p>
         </div>
     </section>
 
-    <section>
-        <div>
-            <h2>non-white section</h2>
+    <section class="section non-white">
+        <div class="container container-center">
+            <h1>non-white section</h1>
             <p>some text</p>
         </div>
     </section>
