update footer styling

--- a/lib/components.html
+++ b/lib/components.html
@@ -119,19 +119,19 @@
     <hr>
 
     <h2>@footer</h2>
-    <footer>
+    <footer class="footer">
         <div>
             Some text
         </div>
         <ul>
-            <li>
-                <a href="/">link1</a>
+            <li class="list list-inline">
+                <a class="link" href="/">link1</a>
             </li>
-            <li>
-                <a href="/">link2</a>
+            <li class="list list-inline">
+                <a class="link" href="/">link2</a>
             </li>
-            <li>
-                <a href="/">link3</a>
+            <li class="list list-inline">
+                <a class="link" href="/">link3</a>
             </li>
         </ul>
     </footer>
