--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 </head>
 <body>
-    <header class="header">
+
+    <!--header-->
+
+    <header>
         <h1>Sankar Krishnan</h1>
         <nav>
             <a href="/">Home</a>
@@ -16,5 +19,14 @@
             <a href="/">Blogs</a>
         </nav>
     </header>
+
+    <!--intro-->
+
+    <div>
+        <img src="images/codethink.svg">
+        <h2>Hi! I am Sankar Krishnan, an aspiring Web Developer</h2>
+        <h3>I present my learnings here, take a look at my projects, blogs and many more yet to come! Suggestions are always welcome!</h3>
+    </div>
+
 </body>
 </html>
