--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <!--header-->
+    <!-- eader -->
 
     <header>
         <h1>Sankar Krishnan</h1>
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <!--intro-->
+    <!-- intro -->
 
     <div>
         <img src="images/codethink.svg">
@@ -28,5 +28,12 @@
         <h3>I present my learnings here, take a look at my projects, blogs and many more yet to come! Suggestions are always welcome!</h3>
     </div>
 
+
+    <!-- tech section -->
+    <section>
+        <h2>My Learning Progress</h2>
+      I am currently learning HTML, CSS and JavaScript. My goal is to become a React developer.
+    </section>
+    
 </body>
 </html>
