--- a/index.html
+++ b/index.html
@@ -31,8 +31,15 @@
 
     <!-- tech section -->
     <section>
-        <h2>My Learning Progress</h2>
-      I am currently learning HTML, CSS and JavaScript. My goal is to become a React developer.
+        <h2>Learning Progress</h2>
+        <p>I am currently learning HTML, CSS and JavaScript. My goal is to become a React developer.</p>
+    </section>
+
+    <!-- project section -->
+    <section>
+        <h2>Projects</h2>
+        <p>Here you can take look at the projects I have done so far.</p>
+        <a href="/">Explore Projects</a>
     </section>
     
 </body>
