update section blogs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <!-- eader -->
+    <!-- header -->
 
     <header>
         <h1>Sankar Krishnan</h1>
@@ -40,6 +40,13 @@
         <h2>Projects</h2>
         <p>Here you can take look at the projects I have done so far.</p>
         <a href="/">Explore Projects</a>
+    </section>
+
+    <!-- blogs -->
+    <section>
+        <h2>Blogs</h2>
+        <p>Along with development, I started writing blogs and you can find them below</p>
+        <a href="/">Read Blogs</a>
     </section>
     
 </body>
