--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
         <p>Along with development, I started writing blogs and you can find them below</p>
         <a href="/">Read Blogs</a>
     </section>
-    
+
+    <!-- footer -->
+    <footer>
+        <h3> Thank you for visiting!</h3>
+        <p>If you like my work make sure to visit again, I will continue to work on more projects and blogs.</p>
+        <p>If you don't, still try to visit again and give your suggestions so that I could make it better.</p>
+        <h2>Drop your views!</h2>
+        <nav>
+            <a href="/">Twitter</a>
+            <a href="/">Github</a>
+            <a href="/">LinkedIn</a>
+        </nav>
+    </footer>
+
 </body>
 </html>
