update header styling

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Sankar Krishnan</title>
 
+    <link href="styles.css" rel="stylesheet">
+
 </head>
 <body>
 
@@ -13,9 +15,10 @@
 
     <header>
         <h1>Sankar Krishnan</h1>
-        <nav>
-            <a href="/">Home</a>
-            <a href="/">Projects</a>
+        <p>Welcome to my portfolio!</p>
+        <nav class="nav">
+            <a class="active" href="/">Home</a>|
+            <a href="/">Projects</a>|
             <a href="/">Blogs</a>
         </nav>
     </header>
