--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
         <h1>Sankar Krishnan</h1>
-        <p>Welcome to my portfolio!</p>
+        <h2>Welcome to my portfolio!</h2>
         <nav class="nav">
             <a class="active" href="/">Home</a>|
             <a href="/">Projects</a>|
@@ -25,10 +25,10 @@
 
     <!-- intro -->
 
-    <div>
-        <img src="images/codethink.svg">
-        <h2>Hi! I am Sankar Krishnan, an aspiring Web Developer</h2>
-        <h3>I present my learnings here, take a look at my projects, blogs and many more yet to come! Suggestions are always welcome!</h3>
+    <div class="intro">
+        <img src="images/feelingproud.svg">
+        <h2>Hi! I am <span>Sankar Krishnan</span>, an aspiring <span>Web Developer</span></h2>
+        <p>I present my learnings here, take a look at my projects, blogs and many more yet to come! Suggestions are always welcome!</p>
     </div>
 
 
