update project section styling
and fix header styling

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
     <!-- tech section -->
-    <section>
+    <section class="non-white">
         <h2>Learning Progress</h2>
         <p>I am currently learning HTML, CSS and JavaScript. My goal is to become a React developer.</p>
     </section>
@@ -42,7 +42,7 @@
     <section>
         <h2>Projects</h2>
         <p>Here you can take look at the projects I have done so far.</p>
-        <a href="/">Explore Projects</a>
+        <a  class ="explore"vhref="/">Explore Projects</a>
     </section>
 
     <!-- blogs -->
