update blog styling

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
     </section>
 
     <!-- blogs -->
-    <section>
+    <section class="non-white">
         <h2>Blogs</h2>
         <p>Along with development, I started writing blogs and you can find them below</p>
-        <a href="/">Read Blogs</a>
+        <a class ="experience" href="/">Read Blogs</a>
     </section>
 
     <!-- footer -->
