update outro styling

--- a/index.html
+++ b/index.html
@@ -52,11 +52,15 @@
         <a class ="experience" href="/">Read Blogs</a>
     </section>
 
-    <!-- footer -->
-    <footer>
+    <!-- outro -->
+    <div class="outro">
         <h3> Thank you for visiting!</h3>
         <p>If you like my work make sure to visit again, I will continue to work on more projects and blogs.</p>
         <p>If you don't, still try to visit again and give your suggestions so that I could make it better.</p>
+    </div>
+
+    <!-- footer -->
+    <footer>
         <h2>Drop your views!</h2>
         <nav>
             <a href="/">Twitter</a>
