update and fix new images for sections

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
 
 
     <!-- tech section -->
+    
     <section class="non-white">
         <h2>Learning Progress</h2>
+        <img class="learn"src="images/learning.svg">
         <p>I am currently learning HTML, CSS and JavaScript. My goal is to become a React developer.</p>
     </section>
 
@@ -42,6 +44,7 @@
     <section>
         <h2>Projects</h2>
         <p>Here you can take look at the projects I have done so far.</p>
+        <img class="project" src="images/projects.svg">
         <a  class ="explore"vhref="/">Explore Projects</a>
     </section>
 
@@ -49,6 +52,7 @@
     <section class="non-white">
         <h2>Blogs</h2>
         <p>Along with development, I started writing blogs and you can find them below</p>
+        <img class="blog" src="images/blogs.svg">
         <a class ="experience" href="/">Read Blogs</a>
     </section>
 
