--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <footer>
         <h2>Drop your views!</h2>
         <nav>
-            <a href="/">Twitter</a>
-            <a href="/">Github</a>
-            <a href="/">LinkedIn</a>
+            <a href="/"><img src="images/github.svg"> </a>
+            <a href="/"><img src="images/twitter.svg"></a>
+            <a href="/"><img src="images/linkedin.svg"></a>
         </nav>
     </footer>
 
