--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2>Projects</h2>
         <p>Here you can take look at the projects I have done so far.</p>
         <img class="project" src="images/projects.svg">
-        <a  class ="explore"vhref="/">Explore Projects</a>
+        <a  class ="explore" href="projects.html">Explore Projects</a>
     </section>
 
     <!-- blogs -->
