--- a/projects.html
+++ b/projects.html
@@ -22,4 +22,9 @@
         </nav>
     </header>
 
- 
+     <!-- intro -->
+
+     <div class="intro">
+        <p>Here you can take look at the projects I have done so far. I have started from CLI apps.</p>
+    </div>
+
