fix rename css home-project&blog link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h2>Projects</h2>
         <p>Here you can take look at the projects I have done so far.</p>
         <img class="project" src="images/projects.svg">
-        <a  class ="explore" href="projects.html">Explore Projects</a>
+        <a  class ="seeproject" href="projects.html">Explore Projects</a>
     </section>
 
     <!-- blogs -->
@@ -53,7 +53,7 @@
         <h2>Blogs</h2>
         <p>Along with development, I started writing blogs and you can find them below</p>
         <img class="blog" src="images/blogs.svg">
-        <a class ="experience" href="/">Read Blogs</a>
+        <a class ="seeblog" href="/">Read Blogs</a>
     </section>
 
     <!-- outro -->
