--- a/projects.html
+++ b/projects.html
@@ -28,3 +28,5 @@
         <p>Here you can take look at the projects I have done so far. I have started from CLI apps.</p>
     </div>
 
+</body>
+</html>
