--- a/projects.html
+++ b/projects.html
@@ -28,5 +28,20 @@
         <p>Here you can take look at the projects I have done so far. I have started from CLI apps.</p>
     </div>
 
+    <ul reversed>
+        <li>
+            <section class="non-white">
+                <h2>How well do you know me?</h2>
+                <p>This is my first CLI app. A quiz about myself. It has two modes and with leaderbord.</p>
+                <a href="https://github.com/sankarkrishnan07/Quiz-How-well-do-you-know-me">
+                    <img class="explore"src="images/code.svg">
+                </a>
+                <a href="https://replit.com/@sankarkrishnan/endgame?v=1?embed=1&output=1">
+                    <img class="experience"src="images/play.svg">
+                </a>
+            </section>
+        </li>
+    </ul>
+
 </body>
 </html>
