--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <h1>Sankar Krishnan</h1>
         <h2>Welcome to my portfolio!</h2>
         <nav class="nav">
-            <a class="active" href="/">Home</a>|
-            <a href="/">Projects</a>|
-            <a href="/">Blogs</a>
+            <a class="active" href="index.html">Home</a>|
+            <a href="projects.html">Projects</a>|
+            <a href="blogs.html">Blogs</a>
         </nav>
     </header>
 
