--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,9 @@
         <h1>Sankar Krishnan</h1>
         <h2></h2>
         <nav class="nav">
-            <a href="/">Home</a>|
-            <a class="active" href="/">Projects</a>|
-            <a href="/">Blogs</a>
+            <a href="index.html">Home</a>|
+            <a class="active" href="projects.html">Projects</a>|
+            <a href="blogs.html">Blogs</a>
         </nav>
     </header>
 
