--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
 
      <header>
         <h1>Sankar Krishnan</h1>
-        <h2></h2>
+        <h2>Welcome to my projects section!</h2>
         <nav class="nav">
             <a href="index.html">Home</a>|
             <a class="active" href="projects.html">Projects</a>|
@@ -28,9 +28,23 @@
         <p>Here you can take look at the projects I have done so far. I have started from CLI apps.</p>
     </div>
 
-    <ul reversed>
+    <ol>
         <li>
             <section class="non-white">
+                <h2>How well do you know Ironman?</h2>
+                <p>This is my second CLI app. A quiz about myself. It has two modes and with leaderbord.</p>
+                <a href="https://github.com/sankarkrishnan07/Quiz-How-well-do-you-know-Ironman">
+                    <img class="explore"src="images/code.svg">
+                </a>
+                <a href="https://replit.com/@sankarkrishnan/Ironman?v=1?embed=1&output=1">
+                    <img class="experience"src="images/play.svg">
+                </a>
+                <h4>Septemper,2021</h4>
+            </section>
+        </li>
+
+        <li>
+            <section>
                 <h2>How well do you know me?</h2>
                 <p>This is my first CLI app. A quiz about myself. It has two modes and with leaderbord.</p>
                 <a href="https://github.com/sankarkrishnan07/Quiz-How-well-do-you-know-me">
@@ -39,9 +53,21 @@
                 <a href="https://replit.com/@sankarkrishnan/endgame?v=1?embed=1&output=1">
                     <img class="experience"src="images/play.svg">
                 </a>
+                <h4>Septemper,2021</h4>
             </section>
         </li>
-    </ul>
+
+    </ol>
+
+     <!-- footer -->
+     <footer>
+        <h2>Drop your views!</h2>
+        <nav>
+            <a href="/"><img src="images/github.svg"> </a>
+            <a href="/"><img src="images/twitter.svg"></a>
+            <a href="/"><img src="images/linkedin.svg"></a>
+        </nav>
+    </footer>
 
 </body>
 </html>
