update social media links

--- a/projects.html
+++ b/projects.html
@@ -63,9 +63,9 @@
      <footer>
         <h2>Drop your views!</h2>
         <nav>
-            <a href="/"><img src="images/github.svg"> </a>
-            <a href="/"><img src="images/twitter.svg"></a>
-            <a href="/"><img src="images/linkedin.svg"></a>
+            <a href="https://github.com/sankarkrishnan07"><img src="images/github.svg"> </a>
+            <a href="https://twitter.com/SankarKrishna18"><img src="images/twitter.svg"></a>
+            <a href="https://www.linkedin.com/in/sankar-krishnan-3a192213b/"><img src="images/linkedin.svg"></a>
         </nav>
     </footer>
 
