--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <h2>Blogs</h2>
         <p>Along with development, I started writing blogs and you can find them below</p>
         <img class="blog" src="images/blogs.svg">
-        <a class ="seeblog" href="/">Read Blogs</a>
+        <a class ="seeblog" href="blogs.html">Read Blogs</a>
     </section>
 
     <!-- outro -->
