fix active link blog

--- a/blogs.html
+++ b/blogs.html
@@ -17,8 +17,8 @@
             <h2>Welcome to my blogs section!</h2>
             <nav class="nav">
                 <a href="index.html">Home</a>|
-                <a class="active" href="projects.html">Projects</a>|
-                <a href="blogs.html">Blogs</a>
+                <a href="projects.html">Projects</a>|
+                <a class="active" href="blogs.html">Blogs</a>
             </nav>
         </header>
     
