update project minionese

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,21 @@
     </div>
 
     <ol>
+
+        <li>
+            <section class="non-white">
+                <h2>Translate your text to Minionese!</h2>
+                <p>This is my first GUI app. A fun translation from English to Minion Language!</p>
+                <a href="https://github.com/sankarkrishnan07/translate-to-minion-language">
+                    <img class="explore"src="images/code.svg">
+                </a>
+                <a href="https://translate-to-minionese.sankarkrishnan.repl.co/">
+                    <img class="experience"src="images/play.svg">
+                </a>
+                <h4>October, 2021</h4>
+            </section>
+        </li>
+
         <li>
             <section class="non-white">
                 <h2>How well do you know Ironman?</h2>
@@ -39,7 +54,7 @@
                 <a href="https://replit.com/@sankarkrishnan/Ironman?v=1?embed=1&output=1">
                     <img class="experience"src="images/play.svg">
                 </a>
-                <h4>September,2021</h4>
+                <h4>September, 2021</h4>
             </section>
         </li>
 
@@ -53,7 +68,7 @@
                 <a href="https://replit.com/@sankarkrishnan/endgame?v=1?embed=1&output=1">
                     <img class="experience"src="images/play.svg">
                 </a>
-                <h4>September,2021</h4>
+                <h4>September, 2021</h4>
             </section>
         </li>
 
